# pyunifi

./: .gitignore  pyproject.toml  setup.cfg
src/pyunifi/: controller.py
src/scripts/: unifi-copy-radius  unifi-create-voucher  unifi-disconnect-client  unifi-log-roaming  unifi-low-snr-reconnect  unifi-ls-clients  unifi-ls-radius  unifi-save-radius  unifi-save-statistics
