[metadata]
name = pyunifi
version = 2.20.1
description = API for Ubiquity Networks UniFi controller
long_description = file: README.md
long_description_content_type = text/markdown
author = Caleb Dunn
author_email = finish.06@gmail.com
url = https://github.com/finish06/unifi-api

install_requires = requests

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
